Wayland: Apply the correct buffer scale to the cursor bitmap

On Ozone/Wayland, the cursor bitmap as obtained by CursorLoader already
matches the device scale factor, after selecting the most appropriate
asset (100P, 200P, etc.). The Wayland surface needs to know about this
scale, so that it doesn't scale it further in some cases (e.g. HiDPI).

On Linux, this was previously working in HiDPI displays because of a bug
in mutter: https://gitlab.gnome.org/GNOME/mutter/-/issues/1215, where
cursor surfaces aren't scaled.

The issue was present on Lacros though, but resulted in cursors being
blurry instead of too big, because, when Chrome was launched, the
initial display configuration wasn't being passed to CursorLoader. This
meant that the 1.0 default scale was used, so that the 100P cursor image
assets were loaded and then scaled by the compositor.

A fix for the latter issue landed in https://crrev.com/c/2443610.

Bug: 1127962, 1141426
Change-Id: I1511fe9fc24f85db77e1bcc66ebbb720a8ce3375
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2470626
Commit-Queue: Henrique Ferreiro <hferreiro@igalia.com>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#821187}