ui/ozone/platform/wayland/host/wayland_cursor.cc
@@ -9,6 +9,7 @@
 
 #include "base/logging.h"
 #include "third_party/skia/include/core/SkBitmap.h"
+#include "ui/gfx/geometry/point.h"
 #include "ui/gfx/skia_util.h"
 #include "ui/ozone/platform/wayland/common/wayland_util.h"
 #include "ui/ozone/platform/wayland/host/wayland_connection.h"
@@ -33,8 +34,9 @@ void WaylandCursor::OnBufferRelease(void* data, wl_buffer* buffer) {
 }
 
 void WaylandCursor::UpdateBitmap(const std::vector<SkBitmap>& cursor_image,
-                                 const gfx::Point& hotspot,
-                                 uint32_t serial) {
+                                 const gfx::Point& hotspot_in_dips,
+                                 uint32_t serial,
+                                 int buffer_scale) {
   DCHECK(connection_->shm());
   if (!pointer_)
     return;
@@ -61,8 +63,10 @@ void WaylandCursor::UpdateBitmap(const std::vector<SkBitmap>& cursor_image,
 
   wl::DrawBitmap(image, &buffer);
 
+  wl_surface_set_buffer_scale(pointer_surface_.get(), buffer_scale);
+
   wl_pointer_set_cursor(pointer_->wl_object(), serial, pointer_surface_.get(),
-                        hotspot.x(), hotspot.y());
+                        hotspot_in_dips.x(), hotspot_in_dips.y());
   wl_surface_damage(pointer_surface_.get(), 0, 0, image_size.width(),
                     image_size.height());
   wl_surface_attach(pointer_surface_.get(), buffer.get(), 0, 0);
